migration-result/ver/13.x/application-access/cloud-apis/aws-console.mdx
---
title: Access AWS With Teleport Application Access
description: How to access AWS with Teleport application access.
videoBanner: GVcy_rffxQw
version: '13.x'
---

Teleport can automatically sign your users into the AWS management console with
appropriate IAM roles. Teleport also provides API access to AWS Command Line
Interface (CLI) or any applications using AWS SDKs like Terraform.

This guide will explain how to:

- Access AWS Management Console through Teleport.
- View Teleport users' AWS console activity in CloudTrail.
- Access the AWS Command Line Interface (CLI) through Teleport.
- Access applications using AWS SDKs through Teleport.

## Prerequisites

<Tabs>
  <Tab title="Open Source">
    - A running Teleport cluster. For details on how to set this up, see our
      [Getting Started](/ver/13.x/index) guide.

    - The `tctl` admin tool and `tsh` client tool version >= 13.2.0.

      ```code
      $ tctl version
      # Teleport v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```

      See [Installation](/ver/13.x/installation) for details.
  </Tab>

  <Tab title="Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see our Enterprise
      [Getting Started](/ver/13.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.2.0,
      which you can download by visiting your [Teleport account](https://teleport.sh).

      ```code
      $ tctl version
      # Teleport Enterprise v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```
  </Tab>

  <Tab title="Teleport Cloud">
    - A Teleport Enterprise Cloud account. If you do not have one, visit the [signup
      page](https://goteleport.com/signup/) to begin a free trial of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.2.0.
      To download these tools, visit the [Downloads](/ver/13.x/choose-an-edition/teleport-cloud/downloads) page.

      ```code
      $ tctl version
      # Teleport Enterprise v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```
  </Tab>
</Tabs>

- Make sure you can connect to Teleport. Log in to your cluster using `tsh`, then use `tctl`
  remotely:
  ```code
  $ tsh login --proxy=teleport.example.com --user=email@example.com
  $ tctl status
  # Cluster  teleport.example.com
  # Version  13.2.0
  # CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
  ```
  You can run subsequent `tctl` commands in this guide on your local machine.

  For full privileges, you can also run `tctl` commands on your Auth Service host.
  ```code
  $ tsh login --proxy=myinstance.teleport.sh --user=email@example.com
  $ tctl status
  # Cluster  myinstance.teleport.sh
  # Version  13.2.0
  # CA pin   sha256:sha-hash-here
  ```
  You must run subsequent `tctl` commands in this guide on your local machine.
- A host running the `teleport` daemon with the Application Service enabled.
  Follow the [Getting Started](/ver/13.x/application-access/getting-started) or [Connecting
  Apps](/ver/13.x/application-access/guides/connecting-apps) guides to get it running.
- IAM permissions in the AWS account you want to connect.
- AWS EC2 or other instance where you can assign a IAM Security Role for the
  Teleport Agent.
- `aws` command line interface (CLI) tool in PATH. [Installing or updating the
  latest version of the AWS CLI
  ](https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-install.html)

<Note>
  If using Teleport deployed in AWS EKS, you cannot use Helm chart
  annotations to specify the IAM permissions;
  you must associate the policy with the cluster role for the worker nodes.
  Otherwise, you will receive "400 Bad Request" errors from AWS.
</Note>

## Step 1/9. \[Optional] Configure Read Only and Power User roles

AWS provides the `ReadOnlyAccess` and `PowerUserAccess` IAM policies that can be incorporated into roles. **Skip this step** if you already have the roles you want to provide access to.

<Note>
  These policies may provide too much or not enough access for your intentions. Validate these meet your expectations if you plan on using them.
</Note>

### Create the example Read Only role

Go to the IAM -> Access Management -> [Roles](https://console.aws.amazon.com/iamv2/home#/roles).
Press Create Role.

![Create Role Step 1](../../../../../assets/create-role-example-readonly-1-309932b26d.png)

### Select the ReadOnlyAccess policy

Press Next and Select the `ReadOnlyAccess`.  Sorting the Policy Name table from Z-A will make it faster to select.

![Select Role Step 2](../../../../../assets/create-role-example-readonly-2-c531d9b5da.png)

Press next through the tags

### Confirm role

Enter a role name and press create role.

![Create Role Step 3](../../../../../assets/create-role-example-readonly-3-61a353eca8.png)

### Repeat for Power User

Follow the same steps and select `PowerUserAccess` IAM Policy to create a `ExamplePowerUser` role.

## Step 2/9. Update IAM role trust relationships

<Note>
  This step is only required if you are allowing access from another account. The trust relationship will already exist for the same account.
</Note>

Teleport uses AWS [federation](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles_providers_enable-console-custom-url.html) to generate sign-in URLs for users, which relies on the `AssumeRole` API
for getting temporary security credentials.
You will need to update your IAM roles' "Trusted entities" to include your AWS account ID.

Go to the [Roles](https://console.aws.amazon.com/iamv2/home#/roles) list, pick
a role and create the following trust policy for it by clicking on "Edit trust
relationship" button on the "Trust relationships" tab:

```yaml
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Principal": {
        "AWS": "arn:aws:iam::<account-id>:root"
      },
      "Action": "sts:AssumeRole"
    }
  ]
}
```

See [How to use trust policies with IAM roles](https://aws.amazon.com/blogs/security/how-to-use-trust-policies-with-iam-roles/)
for more details. After saving the trust policy, the account will show as a
trusted entity.

From the EC2 dashboard select Actions -> Security -> Modify IAM Role.
![AWS trusted entities](../../../../../assets/aws-trusted-entities@2x-8f91d35971.png)

Do this for each IAM role your Teleport users will need to assume.

## Step 3/9. Give Teleport permissions to assume roles

Next, create a Role using this IAM policy to allow Teleport to assume IAM roles:

```yaml
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Action": "sts:AssumeRole",
      "Resource": "*"
    }
  ]
}
```

<Note>
  You can make the policy more strict by providing specific IAM role resource
  ARNs in the Resource field instead of using a wildcard.
</Note>

Attach this policy to the IAM role/user your Teleport Application Service agent
is using.

![AWS Attach Security Role](../../../../../assets/attach-security-role-734008788a.png)

## Step 4/9. Configure Teleport IAM role mapping

The next step is to give your Teleport users permissions to assume IAM roles.

You can do this by creating a role with the `aws_role_arns` field listing all IAM
role ARNs this particular role permits its users to assume:

```yaml
kind: role
version: v5
metadata:
  name: aws-console-access
spec:
  allow:
    app_labels:
      '*': '*'
    aws_role_arns:
    - arn:aws:iam::1234567890:role/ExamplePowerUser
    - arn:aws:iam::1234567890:role/ExampleReadOnlyAccess
```

The `aws_role_arns` field supports template variables so they can be populated
dynamically based on your users' identity provider attributes. See [Role
Templates](/ver/13.x/access-controls/guides/role-templates) for details.

Assign the `aws-console-access` role to your Teleport user by running the following
commands, depending on whether you authenticate as a local Teleport user or via
the `github`, `saml`, or `oidc` authentication connectors:

<Tabs>
  <Tab title="Local User">
    Retrieve your local user's configuration resource:

    ```code
    $ tctl get users/$(tsh status -f json | jq -r '.active.username') > out.yaml
    ```

    Edit `out.yaml`, adding `aws-console-access` to the list of existing roles:

    ```diff
      roles:
       - access
       - auditor
       - editor
    +  - aws-console-access
    ```

    Apply your changes:

    ```code
    $ tctl create -f out.yaml
    ```
  </Tab>

  <Tab title="GitHub">
    Retrieve your `github`  configuration resource:

    ```code
    $ tctl get github/github --with-secrets > github.yaml
    ```

    Edit `github.yaml`, adding `aws-console-access` to the
    `teams_to_roles` section. The team you will map to this role will depend on how
    you have designed your organization's RBAC, but it should be the smallest team
    possible within your organization. This team must also include your user.

    Here is an example:

    ```diff
      teams_to_roles:
        - organization: octocats
          team: admins
          roles:
            - access
    +       - aws-console-access
    ```

    Apply your changes:

    ```code
    $ tctl create -f github.yaml
    ```

    <Warning>
      Note the `--with-secrets` flag in the `tctl get` command. This adds the value of
      `spec.signing_key_pair.private_key` to `github.yaml`. This is a sensitive value,
      so take precautions when creating this file and remove it after updating the resource.
    </Warning>
  </Tab>

  <Tab title="SAML">
    Retrieve your `saml`  configuration resource:

    ```code
    $ tctl get --with-secrets saml/mysaml > saml.yaml
    ```

    Edit `saml.yaml`, adding `aws-console-access` to the
    `attributes_to_roles` section. The attribute you will map to this role will
    depend on how you have designed your organization's RBAC, but it should be the
    smallest group possible within your organization. This group must also include
    your user.

    Here is an example:

    ```diff
      attributes_to_roles:
        - name: "groups"
          value: "my-group"
          roles:
            - access
    +       - aws-console-access
    ```

    Apply your changes:

    ```code
    $ tctl create -f saml.yaml
    ```

    <Warning>
      Note the `--with-secrets` flag in the `tctl get` command. This adds the value of
      `spec.signing_key_pair.private_key` to `saml.yaml`. This is a sensitive value,
      so take precautions when creating this file and remove it after updating the resource.
    </Warning>
  </Tab>

  <Tab title="OIDC">
    Retrieve your `oidc`  configuration resource:

    ```code
    $ tctl get oidc/myoidc --with-secrets > oidc.yaml
    ```

    Edit `oidc.yaml`, adding `aws-console-access` to the
    `claims_to_roles` section. The claim you will map to this role will depend on
    how you have designed your organization's RBAC, but it should be the smallest
    group possible within your organization. This group must also include your
    user.

    Here is an example:

    ```diff
      claims_to_roles:
        - name: "groups"
          value: "my-group"
          roles:
            - access
    +       - aws-console-access
    ```

    Apply your changes:

    ```code
    $ tctl create -f oidc.yaml
    ```

    <Warning>
      Note the `--with-secrets` flag in the `tctl get` command. This adds the value of
      `spec.signing_key_pair.private_key` to `oidc.yaml`. This is a sensitive value,
      so take precautions when creating this file and remove it after updating the resource.
    </Warning>
  </Tab>
</Tabs>

Log out of your Teleport cluster and log in again to assume the new role.

## Step 5/9. Register AWS console application in Teleport

### Configure the Application Service

Add the AWS management console to your Application Service configuration by
editing `/etc/teleport.yaml` on the host that runs the Application Service:

```yaml
version: v3
teleport:
  # Data directory for the Application Proxy service. If running on the same
  # node as Auth/Proxy service, make sure to use different data directories.
  data_dir: /var/lib/teleport-app
  # Instructs the service to load the auth token from the specified file
  # during initial registration with the cluster.
  auth_token: /var/lib/teleport-app/token
  # Proxy address to connect to. Note that it has to be the proxy address
  # because the app service always connects to the cluster over a reverse
  # tunnel.
  proxy_server: teleport.example.com:3080
app_service:
  enabled: "yes"
  apps:
  - name: "awsconsole"
  # The public AWS Console is used after authenticating the user from Teleport
    uri: "https://console.aws.amazon.com/ec2/v2/home"
auth_service:
  enabled: "no"
ssh_service:
  enabled: "no"
proxy_service:
  enabled: "no"
```

Note that the URI must start with one of the following values in order to be
recognized as an AWS console:

| Regions                   | AWS Console URL                        |
| ------------------------- | -------------------------------------- |
| Standard AWS regions      | `https://console.aws.amazon.com`       |
| AWS GovCloud (US) regions | `https://console.amazonaws-us-gov.com` |
| AWS China regions         | `https://console.amazonaws.cn`         |

<Accordion title="Multiple AWS accounts">
  If you have multiple AWS accounts and would like to logically separate them
  in the UI, register an application entry for each and set `aws_account_id`
  label to the account ID:

  ```yaml
  app_service:
    enabled: "yes"
    apps:
    - name: "awsconsole-test"
      uri: "https://console.aws.amazon.com/ec2/v2/home"
      labels:
        aws_account_id: "1234567890"
        env: test
    - name: "awsconsole-prod"
      uri: "https://console.aws.amazon.com/ec2/v2/home"
      labels:
        aws_account_id: "0987654321"
        env: prod
    - name: "awsconsole-third-party"
      uri: "https://console.aws.amazon.com/ec2/v2/home"
      labels:
        aws_account_id: "1234554321"
      aws:
        external_id: "example-external-id"
  ```

  When showing available IAM roles, Teleport will display only role ARNs that
  belong to the specific account.

  For AWS accounts that require external IDs for accessing their resources, set
  the `external_id` field, which the Application Service uses when assuming the
  AWS roles in these accounts.
</Accordion>

### Start the Teleport Application Service

Grant the Application Service access to credentials that it can use to authenticate to
AWS. If you are running the Application Service on an EC2 instance, you should use the EC2
Instance Metadata Service method. Otherwise, you must use environment variables:

<Tabs>
  <Tab title="Instance Metadata Service">
    Teleport will detect when it is running on an EC2 instance and use the Instance
    Metadata Service to fetch credentials.

    The EC2 instance should be configured to use an EC2 instance profile. For more
    information, see: [Using Instance Profiles](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles_use_switch-role-ec2_instance-profiles.html).
  </Tab>

  <Tab title="Environment Variables">
    Teleport's built-in AWS client reads credentials from the following environment
    variables:

    - `AWS_ACCESS_KEY_ID`
    - `AWS_SECRET_ACCESS_KEY`
    - `AWS_DEFAULT_REGION`

    When you start the Application Service, the service reads environment variables from a
    file at the path `/etc/default/teleport`. Obtain these credentials from your
    organization. Ensure that `/etc/default/teleport` has the following content,
    replacing the values of each variable:

    ```text
    AWS_ACCESS_KEY_ID=00000000000000000000
    AWS_SECRET_ACCESS_KEY=0000000000000000000000000000000000000000
    AWS_DEFAULT_REGION=<YOUR_REGION>
    ```
  </Tab>
</Tabs>

<Accordion title="Have multiple sources of AWS credentials?">
  Teleport's AWS client loads credentials from different sources in the following
  order:

  - Environment Variables
  - Shared credentials file
  - Shared configuration file (Teleport always enables shared configuration)
  - EC2 Instance Metadata (credentials only)

  While you can provide AWS credentials via a shared credentials file or shared
  configuration file, you will need to run the Application Service with the `AWS_PROFILE`
  environment variable assigned to the name of your profile of choice.

  If you have a specific use case that the instructions above do not account for,
  consult the documentation for the [AWS SDK for
  Go](https://docs.aws.amazon.com/sdk-for-go/api/aws/session/) for a detailed
  description of credential loading behavior.
</Accordion>

Configure the Application Service to start automatically when the host boots up by
creating a systemd service for it. The instructions depend on how you installed
the Application Service.

<Tabs>
  <Tab title="Package Manager">
    On the host where you will run the Application Service, enable and start Teleport:

    ```code
    $ sudo systemctl enable teleport
    $ sudo systemctl start teleport
    ```
  </Tab>

  <Tab title="TAR Archive">
    On the host where you will run the Application Service, create a systemd service
    configuration for Teleport, enable the Teleport service, and start Teleport:

    ```code
    $ sudo teleport install systemd -o /etc/systemd/system/teleport.service
    $ sudo systemctl enable teleport
    $ sudo systemctl start teleport
    ```
  </Tab>
</Tabs>

You can check the status of the Application Service with `systemctl status teleport`
and view its logs with `journalctl -fu teleport`.

<Warning>
  For non-standard AWS regions such as AWS GovCloud (US) regions and AWS China
  regions, please set the corresponding region in the `AWS_REGION` environment
  variable or in the AWS credentials file so that the Application Service can use
  the correct STS endpoint.
</Warning>

## Step 6/9. Connect to AWS console with assumed IAM role

Navigate to the Applications tab in your Teleport cluster's control panel and
click on the Launch button for the AWS console application which will bring up
an IAM role selector:

![IAM role selector](../../../../../assets/iam-role-selector-0292fc870f.png)

Click on the role you want to assume and you will get redirected to the AWS
management console, signed in with the selected role.

In the console's top-right corner you should see that you're logged in through
federated login and the name of your assumed IAM role:

![Federated login](../../../../../assets/federated-login@2x-f18a98c758.png)

Note that your federated login session is marked with your Teleport username.

<Note>
  If Teleport is running with [temporary security credentials](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_temp.html),
  the management console session will be limited to a maximum of one hour.
</Note>

## Step 7/9. Use CloudTrail to see Teleport user activity

To view CloudTrail events for your federated sessions, navigate to the CloudTrail
[dashboard](https://console.aws.amazon.com/cloudtrail/home) and go to "Event history".

Each Teleport federated login session uses a Teleport username as the federated
username which you can search for to get the events history:

![CloudTrail](../../../../../assets/cloud-trail-d3fc186bff.png)

## Step 8/9. Access AWS CLI

Before beginning this step, make sure that the `aws` command line interface (CLI) tool is installed in PATH. For more information, read [Installing or updating the latest version of the AWS CLI](https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-install.html).

First, log into the previously configured AWS console app on your desktop:

```code
$ tsh apps login --aws-role ExamplePowerUser awsconsole-test
Logged into AWS app awsconsole-test. Example AWS CLI command:

$ tsh aws s3 ls
```

The `--aws-role` flag allows you to specify the AWS IAM role to assume when accessing AWS API. You can either
provide a role name like `--aws-role ExamplePowerUser` or a full role ARN `arn:aws:iam::1234567890:role/ExamplePowerUser`

Now you can use the `tsh aws` command like the native `aws` command-line tool:

```code
$ tsh aws s3 ls
```

To log out of the aws application and remove credentials:

```code
$ tsh apps logout awsconsole-test
```

## Step 9/9. Access applications using AWS SDKs

First, log into the previously configured console app if you haven't already
done so:

```code
$ tsh apps login --aws-role ExamplePowerUser awsconsole-test
```

Now, use the following command to start a local HTTPS proxy server your
applications will be connecting to:

```code
$ tsh proxy aws -p 23456
Started AWS proxy on http://127.0.0.1:23456.

Use the following credentials and HTTPS proxy setting to connect to the proxy:
  AWS_ACCESS_KEY_ID=abcd1234-this-is-an-example
  AWS_SECRET_ACCESS_KEY=zyxw9876-this-is-an-example
  AWS_CA_BUNDLE=<ca-bundle-path>
  HTTPS_PROXY=http://127.0.0.1:23456
```

Use the displayed AWS credentials and HTTPS proxy settings when configuring
your application.

It is important to check how AWS credentials and HTTPS proxy setting can be
configured for your application. For example, many command line tools like
`terraform` or `eksctl` support setting the above AWS credentials and the HTTPS
proxy using environment variables:

```code
$ export AWS_ACCESS_KEY_ID=abcd1234-this-is-an-example
$ export AWS_SECRET_ACCESS_KEY=zyxw9876-this-is-an-example
$ export AWS_CA_BUNDLE=<ca-bundle-path>
$ export HTTPS_PROXY=http://127.0.0.1:23456
$ terraform plan
```

If you are developing your own applications using AWS SDKs, some SDKs may
require extra environment variables (e.g. `AWS_SDK_LOAD_CONFIG=true` for AWS
SDK for Go v2) or require configuring the HTTPS proxy through code (e.g. AWS
SDK for JavaScript).

To log out of the AWS application and remove credentials:

```code
$ tsh apps logout awsconsole-test
```

## Next steps

- Take a closer look at [role-based access controls](/ver/13.x/application-access/controls).
- Explore other application access [guides](/ver/13.x/application-access/guides).
